--- a/package.json
+++ b/package.json
@@ -30,10 +30,15 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cytoscape": "^3.33.1",
+    "cytoscape-dagre": "^2.5.0",
+    "cytoscape-fcose": "^2.2.0",
+    "dagre": "^0.8.5",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-cytoscapejs": "^2.0.0",
     "react-dom": "19.1.0",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
@@ -46,6 +51,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-cytoscapejs": "^1.2.5",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
